Fixed overflow

--- a/css/colorCustom.css
+++ b/css/colorCustom.css
@@ -32,6 +32,7 @@ p > a:hover {
   margin-top: -20px;
   background: none;
   padding-top: 0;
+  overflow: auto;
 }
 
 
